--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <script type="module" crossorigin src="/DJZNAe5k.js"></script>
+    <script type="module" crossorigin src="/BfRq48mT.js"></script>
     <link rel="modulepreload" crossorigin href="/CG73W0Um.js">
     <link rel="stylesheet" crossorigin href="/D5mTd0IA.css">
   </head>
