--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <script type="module" crossorigin src="/BfRq48mT.js"></script>
-    <link rel="modulepreload" crossorigin href="/CG73W0Um.js">
-    <link rel="stylesheet" crossorigin href="/D5mTd0IA.css">
+    <script type="module" crossorigin src="/CbfEDZgl.js"></script>
+    <link rel="stylesheet" crossorigin href="/BtGe6dTd.css">
   </head>
   <body>
     <div id="app"></div>
+    <script src="/fabric.min.js"></script>
   </body>
 </html>
