--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <script type="module" crossorigin src="/CbfEDZgl.js"></script>
+    <script type="module" crossorigin src="/CpiL4HaN.js"></script>
     <link rel="stylesheet" crossorigin href="/BtGe6dTd.css">
   </head>
   <body>
